Fixed stretched images in entity embed preview.

--- a/includes/ts_ck_entity_embed_browser.css
+++ b/includes/ts_ck_entity_embed_browser.css
@@ -35,6 +35,7 @@
 
 .view-content .ts-ck-entity-embed-browser-entity img {
     max-width: 100%;
+    height: auto;
 }
 
 .view-content .ts-ck-entity-embed-selected-entity {
